--- a/src/config/alacritty.yml
+++ b/src/config/alacritty.yml
@@ -142,32 +142,41 @@ font:
 
 # begin_theme
 
+# Colors (One Dark)
 colors:
+  # Default colors
   primary:
-    background: '0x282c34'
-    foreground: '0xdcdfe4'
+    background: '0x1e2127'
+    foreground: '0xabb2bf'
 
+  # Normal colors
   normal:
-    black: '0x282c34'
-    red: '0xe06c75'
-    green: '0x98c379'
-    yellow: '0xe5c07b'
-    blue: '0x61afef'
+    black:   '0x1e2127'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
     magenta: '0xc678dd'
-    cyan: '0x56b6c2'
-    white: '0xdcdfe4'
+    cyan:    '0x56b6c2'
+    white:   '0xabb2bf'
 
+  # Bright colors
   bright:
-    black: '0x282c34'
-    red: '0xe06c75'
-    green: '0x98c379'
-    yellow: '0xe5c07b'
-    blue: '0x61afef'
+    black:   '0x5c6370'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
     magenta: '0xc678dd'
-    cyan: '0x56b6c2'
-    white: '0xdcdfe4'
+    cyan:    '0x56b6c2'
+    white:   '0xffffff'
 
 # end_theme
+
+# Colors -----------------------------------------------------------------------
+
+# # Use custom cursor colors. If true, display the cursor in the cursor.foreground and cursor.background colors, otherwise invert the colors of the cursor.
+custom_cursor_colors: true
 
 # Visual Bell
 #
@@ -349,5 +358,5 @@ draw_bold_text_with_bright_colors: false
 # You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
 # Entries in shell.args are passed unmodified as arguments to the shell.
 #
-# shell:
-#   program: /usr/local/bin/zsh
+shell:
+  program: /usr/local/bin/zsh
