--- a/conf/themes/challenger_deep.yaml
+++ b/conf/themes/challenger_deep.yaml
@@ -1,26 +1,12 @@
-# Colors (Challenger Deep)
 colors:
   # Default colors
   primary:
-    background: '0x1e1c31'
-    foreground: '0xcbe1e7'
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0xff271d'
-    cursor: '0xfbfcfc'
+    background: '0x1b182c'
+    foreground: '0xcbe3e7'
+
   # Normal colors
   normal:
-    black: '0x141228'
-    red: '0xff5458'
-    green: '0x62d196'
-    yellow: '0xffb378'
-    blue: '0x65b2ff'
-    magenta: '0x906cff'
-    cyan: '0x63f2f1'
-    white: '0xa6b3cc'
-  # Bright colors
-  bright:
-    black: '0x565575'
+    black: '0x100e23'
     red: '0xff8080'
     green: '0x95ffa4'
     yellow: '0xffe9aa'
@@ -28,3 +14,14 @@ colors:
     magenta: '0xc991e1'
     cyan: '0xaaffe4'
     white: '0xcbe3e7'
+
+  # Bright colors
+  bright:
+    black: '0x565575'
+    red: '0xff5458'
+    green: '0x62d196'
+    yellow: '0xffb378'
+    blue: '0x65b2ff'
+    magenta: '0x906cff'
+    cyan: '0x63f2f1'
+    white: '0xa6b3cc'
