--- a/conf/alacritty.yml
+++ b/conf/alacritty.yml
@@ -93,6 +93,7 @@ font:
 # begin_theme
 
 schemes:
+
   dracula: &dracula # Default colors
     primary:
       background: '0x282a36'
@@ -113,6 +114,15 @@ schemes:
     cursor:
       text: '0x44475a'
       cursor: '0xf8f8f2'
+
+    # Selection colors
+    #
+    # Colors which should be used to draw the selection area. If selection
+    # background is unset, selection color will be the inverse of the cell colors.
+    # If only text is unset the cell text color will remain the same.
+    selection:
+      text: '0xf8f8f2'
+      background: '0x44475a'
 
     # Normal colors
     normal:
@@ -236,7 +246,7 @@ schemes:
       cyan: '0x63f2f1'
       white: '0xa6b3cc'
 
-colors: *challenger_deep
+colors: *dracula
 
 # end_theme
 
