--- a/conf/alacritty.yml
+++ b/conf/alacritty.yml
@@ -67,7 +67,7 @@ font:
   normal:
     family: FuraCode Nerd Font Mono
     # Style can be specified to pick a specific face.
-    style: Retina
+    style: Normal
 
   # The bold font face
   bold:
@@ -285,7 +285,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.1
+background_opacity: 1.0
 
 # Mouse bindings
 #
