--- a/conf/alacritty.yml
+++ b/conf/alacritty.yml
@@ -65,24 +65,24 @@ scrolling:
 
 font:
   normal:
-    family: FuraCode Nerd Font Mono
+    family: FiraCode Nerd Font Mono
     # Style can be specified to pick a specific face.
-    style: Normal
+    style: Retina
 
   # The bold font face
   bold:
-    family: FuraCode Nerd Font Mono
+    family: FiraCode Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: FuraCode Nerd Font Mono
+    family: FiraCode Nerd Font Mono
     # Style can be specified to pick a specific face.
     style: Italic
 
   # Point size of the font
-  size: 19
+  size: 20
 
   # Use custom cursor colors. If true, display the cursor in the cursor.foreground
   # and cursor.background colors, otherwise invert the colors of the cursor.
@@ -276,7 +276,7 @@ custom_cursor_colors: true
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
@@ -304,7 +304,7 @@ background_opacity: 1.0
 # section.
 
 # Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
+window.dynamic_title: true
 
 cursor:
   # Cursor style
