--- a/conf/alacritty.yml
+++ b/conf/alacritty.yml
@@ -1,430 +1,16 @@
-# Configuration for Alacritty, the GPU enhanced terminal emulator
+# Configuration for Alacritty, the GPU enhanced terminal emulator.
 
-# Any items in the `env` entry below will be added as
-# environment variables. Some entries may override variables
-# set by alacritty it self.
-env:
-  # TERM env customization.
-  #
-  # If this property is not set, alacritty will set it to xterm-256color.
-  #
-  # Note that some xterm terminfo databases don't declare support for italics.
-  # You can verify this by checking for the presence of `smso` and `sitm` in
-  # `infocmp xterm-256color`.
-  TERM: screen-256color # this is what neovim needs
-  #TERM: screen-256color # this is what neovim needs
-
-window:
-  # Window dimensions (changes require restart)
-  #
-  # Specified in number of columns/lines, not pixels. If both are zero this
-  # setting is ignored.
-  dimensions:
-    columns: 0
-    lines: 0
-
-  # Window padding (changes require restart)
-  #
-  # Blank space added around the window in pixels. This padding is not scaled by
-  # DPI and the specified value is always added at both opposing sides.
-  padding:
-    x: 2
-    y: 2
-
-  # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
-
-  # Window decorations
-  #
-  # Available values:
-  # - full: borders and title bar
-  # - none: neither borders nor title bar
-  # - transparent: title bar, transparent background and title bar buttons
-  # - buttonless: title bar, transparent background, but no title bar buttons
-  decorations: full
-
-  # Startup Mode (changes require restart)
-  #
-  # Values for `startup_mode`:
-  #   - Windowed
-  #   - Maximized
-  #   - Fullscreen
-  #
-  # Values for `startup_mode` (macOS only):
-  #   - SimpleFullscreen
-  startup_mode: Maximized
-
-scrolling:
-  # Maximum number of lines in the scrollback buffer.
-  # Specifying '0' will disable scrolling.
-  history: 10000
-
-  # Number of lines the viewport will move for every line scrolled when
-  # scrollback is enabled (history > 0).
-  multiplier: 3
-
-font:
-  normal:
-    family: FiraCode Nerd Font Mono
-    # Style can be specified to pick a specific face.
-    style: Retina
-
-  # The bold font face
-  bold:
-    family: FiraCode Nerd Font Mono
-    # Style can be specified to pick a specific face.
-    style: Bold
-
-  # The italic font face
-  italic:
-    family: FiraCode Nerd Font Mono
-    # Style can be specified to pick a specific face.
-    style: Italic
-
-  # Point size of the font
-  size: 20
-
-  # Use custom cursor colors. If true, display the cursor in the cursor.foreground
-  # and cursor.background colors, otherwise invert the colors of the cursor.
-  # custom_cursor_colors: false
-
-# Colors -----------------------------------------------------------------------
-
-# begin_theme
-
-schemes:
-  dracula: &dracula # Default colors
-    primary:
-      background: "0x282a36"
-      foreground: "0xf8f8f2"
-
-      # Bright and dim foreground colors
-      #
-      # The dimmed foreground color is calculated automatically if it is not present.
-      # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-      # is `false`, the normal foreground color will be used.
-      #dim_foreground: '0x9a9a9a'
-      #bright_foreground: '0xffffff'
-
-    # Cursor colors
-    #
-    # Colors which should be used to draw the terminal cursor. If these are unset,
-    # the cursor color will be the inverse of the cell color.
-    cursor:
-      text: "0x44475a"
-      cursor: "0xf8f8f2"
-
-    # Selection colors
-    #
-    # Colors which should be used to draw the selection area. If selection
-    # background is unset, selection color will be the inverse of the cell colors.
-    # If only text is unset the cell text color will remain the same.
-    selection:
-      text: "0xf8f8f2"
-      background: "0x44475a"
-
-    # Normal colors
-    normal:
-      black: "0x000000"
-      red: "0xff5555"
-      green: "0x50fa7b"
-      yellow: "0xf1fa8c"
-      blue: "0xbd93f9"
-      magenta: "0xff79c6"
-      cyan: "0x8be9fd"
-      white: "0xbfbfbf"
-
-    # Bright colors
-    bright:
-      black: "0x4d4d4d"
-      red: "0xff6e67"
-      green: "0x5af78e"
-      yellow: "0xf4f99d"
-      blue: "0xcaa9fa"
-      magenta: "0xff92d0"
-      cyan: "0x9aedfe"
-      white: "0xe6e6e6"
-
-    # Dim colors
-    #
-    # If the dim colors are not set, they will be calculated automatically based
-    # on the `normal` colors.
-    dim:
-      black: "0x14151b"
-      red: "0xff2222"
-      green: "0x1ef956"
-      yellow: "0xebf85b"
-      blue: "0x4d5b86"
-      magenta: "0xff46b0"
-      cyan: "0x59dffc"
-      white: "0xe6e6d1"
-
-    # Indexed Colors
-    #
-    # The indexed colors include all colors from 16 to 256.
-    # When these are not set, they're filled with sensible defaults.
-    #
-    # Example:
-    #   `- { index: 16, color: '0xff00ff' }`
-    #
-    indexed_colors: []
-
-  nord: &nord
-    primary:
-      background: "0x2E3440"
-      foreground: "0xD8DEE9"
-    cursor:
-      text: "0x2E3440"
-      cursor: "0xD8DEE9"
-    normal:
-      black: "0x3B4252"
-      red: "0xBF616A"
-      green: "0xA3BE8C"
-      yellow: "0xEBCB8B"
-      blue: "0x81A1C1"
-      magenta: "0xB48EAD"
-      cyan: "0x88C0D0"
-      white: "0xE5E9F0"
-    bright:
-      black: "0x4C566A"
-      red: "0xBF616A"
-      green: "0xA3BE8C"
-      yellow: "0xEBCB8B"
-      blue: "0x81A1C1"
-      magenta: "0xB48EAD"
-      cyan: "0x8FBCBB"
-      white: "0xECEFF4"
-
-  ayu_mirage: &ayu_mirage
-    primary:
-      background: "0x212733"
-      foreground: "0xd0cec3"
-    normal:
-      black: "0x212733"
-      red: "0xea5965"
-      green: "0xade46b"
-      yellow: "0xfec254"
-      blue: "0x2d91d0"
-      magenta: "0xc9aeff"
-      cyan: "0x86e2bf"
-      white: "0xbbbbbb"
-    bright:
-      black: "0x555555"
-      red: "0xea5965"
-      green: "0xc1e436"
-      yellow: "0xfed96d"
-      blue: "0x5555ff"
-      magenta: "0xff55ff"
-      cyan: "0x99ffda"
-      white: "0xffffff"
-
-  challenger_deep: &challenger_deep # Default colors
-    primary:
-      background: "0x1b182c"
-      foreground: "0xcbe3e7"
-
-    # Normal colors
-    normal:
-      black: "0x100e23"
-      red: "0xff8080"
-      green: "0x95ffa4"
-      yellow: "0xffe9aa"
-      blue: "0x91ddff"
-      magenta: "0xc991e1"
-      cyan: "0xaaffe4"
-      white: "0xcbe3e7"
-
-    # Bright colors
-    bright:
-      black: "0x565575"
-      red: "0xff5458"
-      green: "0x62d196"
-      yellow: "0xffb378"
-      blue: "0x65b2ff"
-      magenta: "0x906cff"
-      cyan: "0x63f2f1"
-      white: "0xa6b3cc"
-
-colors: *dracula
-
-# end_theme
-
-# Colors -----------------------------------------------------------------------
-
-# # Use custom cursor colors. If true, display the cursor in the cursor.foreground and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: true
-
-# Visual Bell
+# Import additional configuration files
 #
-# Any time the BEL code is received, Alacritty "rings" the visual bell. Once
-# rung, the terminal background will be set to white and transition back to the
-# default background color. You can control the rate of this transition by
-# setting the `duration` property (represented in milliseconds). You can also
-# configure the transition function by setting the `animation` property.
+# Imports are loaded in order, skipping all missing files, with the importing
+# file being loaded last. If a field is already present in a previous import, it
+# will be replaced.
 #
-# Values for `animation`:
-#   - Ease
-#   - EaseOut
-#   - EaseOutSine
-#   - EaseOutQuad
-#   - EaseOutCubic
-#   - EaseOutQuart
-#   - EaseOutQuint
-#   - EaseOutExpo
-#   - EaseOutCirc
-#   - Linear
-#
-# Specifying a `duration` of `0` will disable the visual bell.
-bell:
-  animation: EaseOutExpo
-  duration: 0
-  color: "0xffffff"
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
-
-# Mouse bindings
-#
-# Available fields:
-#   - mouse
-#   - action
-#   - mods (optional)
-#
-# Values for `mouse`:
-#   - Middle
-#   - Left
-#   - Right
-#   - Numeric identifier such as `5`
-#
-# All available `mods` and `action` values are documented in the key binding
-# section.
-
-# Allow terminal applications to change Alacritty's window title.
-window.dynamic_title: true
-
-cursor:
-  # Cursor style
-  #
-  # Values for `style`:
-  #   - ▇ Block
-  #   - _ Underline
-  #   - | Beam
-  style: Block
-
-  # If this is `true`, the cursor will be rendered as a hollow box when the
-  # window is not focused.
-  unfocused_hollow: true
-
-key_bindings:
-  - { key: Period, mods: Command, action: Paste }
-  - { key: V, mods: Command, action: Paste }
-  - { key: C, mods: Command, action: Copy }
-  - { key: Q, mods: Command, action: Quit }
-  - { key: W, mods: Command, action: Quit }
-  - { key: Home, chars: "\x1bOH", mode: AppCursor }
-  - { key: Home, chars: "\x1b[1~", mode: ~AppCursor }
-  - { key: End, chars: "\x1bOF", mode: AppCursor }
-  - { key: End, chars: "\x1b[4~", mode: ~AppCursor }
-  - { key: PageUp, mods: Shift, chars: "\x1b[5;2~" }
-  - { key: PageUp, mods: Control, chars: "\x1b[5;5~" }
-  - { key: PageUp, chars: "\x1b[5~" }
-  - { key: PageDown, mods: Shift, chars: "\x1b[6;2~" }
-  - { key: PageDown, mods: Control, chars: "\x1b[6;5~" }
-  - { key: PageDown, chars: "\x1b[6~" }
-  - { key: Left, mods: Shift, chars: "\x1b[1;2D" }
-  - { key: Left, mods: Control, chars: "\x1b[1;5D" }
-  - { key: Left, mods: Alt, chars: "\x1b[1;3D" }
-  - { key: Left, chars: "\x1b[D", mode: ~AppCursor }
-  - { key: Left, chars: "\x1bOD", mode: AppCursor }
-  - { key: Right, mods: Shift, chars: "\x1b[1;2C" }
-  - { key: Right, mods: Control, chars: "\x1b[1;5C" }
-  - { key: Right, mods: Alt, chars: "\x1b[1;3C" }
-  - { key: Right, chars: "\x1b[C", mode: ~AppCursor }
-  - { key: Right, chars: "\x1bOC", mode: AppCursor }
-  - { key: Up, mods: Shift, chars: "\x1b[1;2A" }
-  - { key: Up, mods: Control, chars: "\x1b[1;5A" }
-  - { key: Up, mods: Alt, chars: "\x1b[1;3A" }
-  - { key: Up, chars: "\x1b[A", mode: ~AppCursor }
-  - { key: Up, chars: "\x1bOA", mode: AppCursor }
-  - { key: Down, mods: Shift, chars: "\x1b[1;2B" }
-  - { key: Down, mods: Control, chars: "\x1b[1;5B" }
-  - { key: Down, mods: Alt, chars: "\x1b[1;3B" }
-  - { key: Down, chars: "\x1b[B", mode: ~AppCursor }
-  - { key: Down, chars: "\x1bOB", mode: AppCursor }
-  - { key: Tab, mods: Shift, chars: "\x1b[Z" }
-  - { key: F1, chars: "\x1bOP" }
-  - { key: F2, chars: "\x1bOQ" }
-  - { key: F3, chars: "\x1bOR" }
-  - { key: F4, chars: "\x1bOS" }
-  - { key: F5, chars: "\x1b[15~" }
-  - { key: F6, chars: "\x1b[17~" }
-  - { key: F7, chars: "\x1b[18~" }
-  - { key: F8, chars: "\x1b[19~" }
-  - { key: F9, chars: "\x1b[20~" }
-  - { key: F10, chars: "\x1b[21~" }
-  - { key: F11, chars: "\x1b[23~" }
-  - { key: F12, chars: "\x1b[24~" }
-  - { key: Back, chars: "\x7f" }
-  - { key: Back, mods: Alt, chars: "\x1b\x7f" }
-  - { key: Insert, chars: "\x1b[2~" }
-  - { key: Delete, chars: "\x1b[3~" }
-
-# Mouse Bindings ---------------------------------------------------------------
-mouse_bindings:
-  - { mouse: Middle, action: PasteSelection }
-
-mouse:
-  # Click settings
-  #
-  # The `double_click` and `triple_click` settings control the time
-  # alacritty should wait for accepting multiple clicks as one double
-  # or triple click.
-  double_click: { threshold: 300 }
-  triple_click: { threshold: 300 }
-
-  # If this is `true`, the cursor is temporarily hidden when typing.
-  hide_when_typing: true
-
-  # url:
-  # URL launcher
-  #
-  # This program is executed when clicking on a text which is recognized as a URL.
-  # The URL is always added to the command as the last parameter.
-  #
-  # Default:
-  #   - (macOS) open
-  #   - (Linux) xdg-open
-  #   - (Windows) explorer
-  #launcher: xdg-open
-  # URL modifiers
-  #
-  # These are the modifiers that need to be held down for opening URLs when clicking
-  # on them. The available modifiers are documented in the key binding section.
-  # modifiers: None
-
-selection:
-  semantic_escape_chars: ',│`|:"'' ()[]{}<>'
-
-  # When set to `true`, selected text will be copied to the primary clipboard.
-  save_to_clipboard: false
-
-# Other ------------------------------------------------------------------------
-
-# Live config reload (changes require restart)
-live_config_reload: true
-
-# Should display the render timer
-debug.render_timer: false
-
-# When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: false
-# Shell
-#
-# You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
-# Entries in shell.args are passed unmodified as arguments to the shell.
-#
-# shell:
-# program: /usr/local/bin/zsh
+# All imports must either be absolute paths starting with `/`, or paths relative
+# to the user's home directory starting with `~/`.
+import:
+  - ~/.config/alacritty/core.yml
+  - ~/.config/alacritty/themes/catppuccin/catppuccin-mocha.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-macchiato.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-frappe.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-latte.yml
