fix(config): change path home (#54)

--- a/conf/alacritty.toml
+++ b/conf/alacritty.toml
@@ -1,5 +1,5 @@
 [general]
 import = [
-  "/Volumes/Data/luchomayta/.config/alacritty/core.toml",
-  "/Volumes/Data/luchomayta/.config/alacritty/themes/catppuccin/catppuccin-mocha.toml",
+  "~/.config/alacritty/core.toml",
+  "~/.config/alacritty/themes/catppuccin/catppuccin-mocha.toml",
 ]
